# sebi_compliance_agent_classical

./: README.md  best_config.json  pyproject.toml  run_eval.sh
examples/: master_circular.txt  regulation_30.txt  sample_circular.txt
src/sebi_compliance_agent/: __init__.py  api.py  autotune.py  cli.py  dataset_generator.py  evaluator.py  extraction.py  graph_store.py  ingestion.py  models.py  pipeline.py  query_engine.py  retrieval.py
synth_data/: autotune_results.json  gold_references.jsonl  metrics.json  metrics_baseline.json  metrics_permissive.json
synth_data/cs/: synthetic_doc_1.txt  synthetic_doc_10.txt  synthetic_doc_2.txt  synthetic_doc_3.txt  synthetic_doc_4.txt  synthetic_doc_5.txt  synthetic_doc_6.txt  synthetic_doc_7.txt  synthetic_doc_8.txt  synthetic_doc_9.txt
tests/: test_agent.py
