[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sebi-compliance-agent"
version = "0.2.0"
description = "Compliance knowledge graph + hybrid retrieval agent for SEBI circulars and related legal PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=5.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "rank-bm25>=0.2.2",
  "rapidfuzz>=3.9.0",
  "requests>=2.32.0"
]

[project.optional-dependencies]
dense = [
  "faiss-cpu>=1.8.0.post1",
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0"
]
ocr = [
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0"
]
llm = [
  "openai>=1.30.0",
  "google-generativeai>=0.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]